<resources>
    <string name="app_name">Kill_team_helper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ally_stats">ALLY STATS</string>
    <string name="atacks">Atacks</string>
    <string name="damage">Damage</string>
    <string name="bs_ws">BS/WS</string>
    <string name="critic_dmg">Critic_Dmg</string>
    <string name="enemy_stats">ENEMY STATS</string>
    <string name="defense">Defense</string>
    <string name="save">Save</string>
    <string name="wounds">Wounds</string>
    <string name="extra">Extra</string>
    <string name="results">RESULTS</string>
    <string name="hits">Hits</string>
    <string name="saved_crit">Saved_Crit</string>
    <string name="saved_hits">Saved hits</string>
    <string name="critics">Critics</string>
    <string name="total_dmg">Total_DMG</string>
    <string name="error">ERROR</string>
    <string name="calculate">Calculate</string>
    <string name="todo">TODO</string>
    <string name="todo3">TODO</string>
    <string name="tododf">TODO</string>
    <string name="equipments">Equipments</string>
    <string name="fireteams">FireTeams</string>
    <string name="ploys">Ploys</string>

</resources>