<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <EditText
        android:id="@+id/stats_ally_Extra_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@id/stats_ally_Wounds_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Extra_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extra"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stats_ally_Extra_id"
        app:layout_constraintEnd_toEndOf="@+id/stats_ally_Extra_id"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/stats_ally_Extra_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <EditText
        android:id="@+id/stats_ally_Wounds_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Wounds_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wounds"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stats_ally_Wounds_id"
        app:layout_constraintEnd_toEndOf="@+id/stats_ally_Wounds_id"
        app:layout_constraintStart_toStartOf="@+id/stats_ally_Wounds_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <EditText
        android:id="@+id/stats_ally_Save_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@+id/stats_ally_Extra_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Save_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stats_ally_Save_id"
        app:layout_constraintEnd_toEndOf="@+id/stats_ally_Save_id"
        app:layout_constraintStart_toStartOf="@+id/stats_ally_Save_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <EditText
        android:id="@+id/stats_ally_Def_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@id/stats_ally_Save_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Defense_id"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:text="@string/defense"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stats_ally_Def_id"
        app:layout_constraintEnd_toEndOf="@+id/stats_ally_Def_id"
        app:layout_constraintStart_toStartOf="@+id/stats_ally_Def_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/textView_Enemy_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enemy_stats"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_Ally_stats"
        app:layout_constraintStart_toStartOf="@+id/textView_Ally_stats"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/stats_ally_Critic_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@+id/stats_ally_Def_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_Critic_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/critic_dmg"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stats_ally_Critic_id"
        app:layout_constraintEnd_toEndOf="@+id/stats_ally_Critic_id"
        app:layout_constraintStart_toStartOf="@+id/stats_ally_Critic_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <EditText
        android:id="@+id/stats_ally_BS_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@id/stats_ally_Critic_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_BS_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bs_ws"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stats_ally_BS_id"
        app:layout_constraintEnd_toEndOf="@+id/stats_ally_BS_id"
        app:layout_constraintStart_toStartOf="@+id/stats_ally_BS_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <EditText
        android:id="@+id/Dmg_ally_stat_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@+id/stats_ally_BS_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/stats_ally_Dmg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/damage"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Dmg_ally_stat_id"
        app:layout_constraintEnd_toEndOf="@+id/Dmg_ally_stat_id"
        app:layout_constraintStart_toStartOf="@+id/Dmg_ally_stat_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <EditText
        android:id="@+id/stats_ally_Atk_id"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusDown="@+id/Dmg_ally_stat_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        android:hint="1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_ATK_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atacks"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stats_ally_Atk_id"
        app:layout_constraintEnd_toEndOf="@+id/stats_ally_Atk_id"
        app:layout_constraintStart_toStartOf="@+id/stats_ally_Atk_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/textView_Ally_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ally_stats"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/sendbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />


</androidx.constraintlayout.widget.ConstraintLayout>